Fixes #5399 by reverting the `overflow` of Firestore CardActionBar
The regression was introduced in #888.

This reverts a minor cosmetic issue where the icons are able to extend
past their sides... but it happens less often with the media-queries
scaling things down.

--- a/src/components/Firestore/PanelHeader.scss
+++ b/src/components/Firestore/PanelHeader.scss
@@ -18,7 +18,7 @@
 
 .Firestore-PanelHeader {
   .CardActionBar {
-    overflow: scroll;
+    overflow: visible;
   }
   .CardActionBar-container {
     padding: 8px 12px;
